
  * [curses] Show intended action when downgrading (Closes: #516517)

    In package view/info screen, it was not handling this action and not showing
    anything in this case.

- User visible changes:

  * Make boundaries of sessions in the log file more clear (Closes: #269275)

- Internal changes:

  * temp.cc: simplify code and messages and reduce the use of boost libs

  * configure.ac: Remove checks for boost/scoped_array.hpp, not used anymore


[2015-09-17]
Version 0.7.2

- New features:

  * 'Escape' key cancels input dialogs (search, limit, etc.) (Closes: #493322)

  * Extend "firstchar" grouping policy to optionally use source package names.

    With "firstchar(binary)" or the default "firstchar" it will use binary
    package names (same behaviour as before); while with "firstchar(source)" it
    will use source package names.

    This is useful for example when browsing packages coming from the same
    source package ("source" grouping policy) within large collections
    (examples: all installed packages, all upgradable packages, all packages
    from "main" section), to add an intermediate grouping step.  In this way,
    one can for example emulate the hierarchy of FTPs (try grouping:
    "section(topdir),firstchar(source),source").

  * [curses] Add 'New Source Package View' to Views menu (thanks Thadeu Lima de
    Souza Cascardo, see #497206), with some updates and minor modifications,
    like more complex grouping.

    The menu entry was removed before applying the patch attached to that bug
    report, see comment to the commit: 66adb6c872f7b49279da43601e7d3ff199996c1a

  * [curses] Use Yellow/Brown colour to highlight downgrades (Closes: #584510)

    Previously downgrades were not highlighted, so it was bit confusing/odd and
    it looked as if nothing would be done with the package.

    There are not many colours "left" in the limited choice, only Yellow/Brown