@@ -138,7 +138,6 @@ boost/optional.hpp dnl
 boost/preprocessor/repetition/enum_binary_params.hpp dnl
 boost/preprocessor/repetition/enum_params.hpp dnl
 boost/preprocessor/repetition/repeat.hpp dnl
-boost/random.hpp dnl
 boost/range.hpp dnl
 boost/test/unit_test.hpp dnl
 boost/type_traits/is_same.hpp dnl
