@@ -19,7 +19,8 @@ Version 0.7.3 UNRELEASED
 
   * temp.cc: simplify code and messages and reduce the use of boost libs
 
-  * configure.ac: Remove checks for boost/scoped_array.hpp, not used anymore
+  * configure.ac: Remove checks for boost/scoped_array.hpp and boost/random.hpp,
+    not used anymore -- a few seconds less per compilation
 
 
 [2015-09-17]
